Added button that exports the data base to Excel!

--- a/Site.master
+++ b/Site.master
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">BRDR Capstone</a>
+                    <a class="navbar-brand" runat="server" href="~/">Social Evolution</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
