--- a/Content/themes/metroblue/jquery-ui.css
+++ b/Content/themes/metroblue/jquery-ui.css
@@ -1228,6 +1228,8 @@ button.ui-button-icons-only {
 /* no icon support for input elements, provide padding by default */
 input.ui-button {
     padding: .4em 1em;
+    top: 3px;
+    left: 516px;
 }
 
 /*button icon element(s) */
